Opened 12 years ago
Closed 12 years ago
#9851 closed bug (fixed)
Forkbomb creates Kernel Screen of Death
Reported by: | mdickie | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/alpha4.1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
/* Compile using gcc forkbomb.c -o forkbomb */ #include <unistd.h> int main() { while(1) fork(); return 0; }
Tested on VirtualBox which needs multiple instances of the forkbomb. Using
:(){ forkbomb|forkbomb& };:
After some times typing it Kernel Screen of Death appears.
Also tested on an old Notebook PC Dell Latitude C640 but there you simply have to run forkbomb. BTW: It would be great if haiku would call the Screen of Death KSOD.
Attachments (1)
Change History (4)
comment:1 by , 12 years ago
Component: | - General → System/Kernel |
---|---|
Owner: | changed from | to
comment:2 by , 12 years ago
I attached an image because I don't know where I can read out the message/backtrace for Haiku.
Note:
See TracTickets
for help on using tickets.
What's the actual panic message/backtrace? As an aside, the name KDL is specifically a BeOS reference.